--- a/gui/src/assets/styles.scss
+++ b/gui/src/assets/styles.scss
@@ -1047,3 +1047,6 @@ fieldset{
 .p-terminal-prompt-value,.p-terminal-command-value{
 	color: #f5f5f5 !important;
 }
+.p-terminal-command-response{
+	white-space: pre;
+}
